[package]
name = "portier-login-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
http = "1.0.0"
reqwest = { version = "0.11.22", features = ["cookies", "json"] }
reqwest_cookie_store = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
termion = "2.0.3"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
